--- a/docs/day-5/fullstack-dapp/backend/Dockerfile
+++ b/docs/day-5/fullstack-dapp/backend/Dockerfile
@@ -4,21 +4,20 @@ FROM node:20-alpine
 # Set working directory
 WORKDIR /usr/src/app
 
-# Install dependencies
-# Copy package.json and pnpm-lock.yaml
+# Install pnpm globally
+RUN npm install -g pnpm
+
+# Copy package files
 COPY package.json pnpm-lock.yaml ./
 
-# Install pnpm
-npm install -g pnpm
-
-# Install production dependencies
-RUN pnpm install --prod --frozen-lockfile
+# Install dependencies
+RUN pnpm install --frozen-lockfile
 
 # Copy source code
 COPY . .
 
 # Build the application
-RUN pnpm install --frozen-lockfile && npm run build
+RUN npm run build
 
 # Expose port
 EXPOSE 3000
